# QuartzAgency

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
QuartzAgency/: asgi.py  settings.py  urls.py  wsgi.py
app/: backend.py  forms.py  models.py  urls.py  validators.py  views.py
app/tests/: __init__.py  test_integration_auth.py  test_mock.py  test_models_unit.py
static/css/: style.css
static/js/: main.js
templates/: base.html  main.html
templates/auth/: company_register.html  employer_register.html  login.html  register.html
